--- a/Precily.ipynb
+++ b/Precily.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/Seung-heon-Baek/Precily/blob/main/Precily.ipynb",
-      "authorship_tag": "ABX9TyPNmmeo7BalvlpV3sGGdItp",
+      "authorship_tag": "ABX9TyN72hZm0282Y2Uo2hM8UuBt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,22 +38,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9ko5VDMgstOI",
-        "outputId": "1d18819d-59e8-423e-b3fe-c6af989f05bc"
+        "outputId": "08e9bbc9-7c31-4798-bf4a-92f3ac7305b6"
       },
-      "execution_count": 1,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'Precily'...\n",
-            "remote: Enumerating objects: 1243, done.\u001b[K\n",
-            "remote: Counting objects: 100% (93/93), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (60/60), done.\u001b[K\n",
-            "remote: Total 1243 (delta 32), reused 89 (delta 30), pack-reused 1150 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (1243/1243), 1.68 GiB | 30.15 MiB/s, done.\n",
-            "Resolving deltas: 100% (540/540), done.\n",
-            "Updating files: 100% (259/259), done.\n"
+            "fatal: destination path 'Precily' already exists and is not an empty directory.\n"
           ]
         }
       ]
@@ -222,17 +215,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ujGB0YAGoOQk",
-        "outputId": "2c96f64f-2ac9-46d6-d747-8bce1076a984",
+        "outputId": "c807bb1b-7df9-48a0-d752-e900d9f72f0a",
         "collapsed": true
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "\u001b[1;30;43mStreaming output truncated to the last 5000 lines.\u001b[0m\n",
             "\u001b[01m\u001b[K../inst/include/Eigen/src/Eigenvalues/Tridiagonalization.h:434:55:\u001b[m\u001b[K   required from ‘\u001b[01m\u001b[Kvoid Eigen::internal::tridiagonalization_inplace(MatrixType&, DiagonalType&, SubDiagonalType&, CoeffVectorType&, bool) [with MatrixType = Eigen::Matrix<double, -1, -1>; DiagonalType = Eigen::Matrix<double, -1, 1>; SubDiagonalType = Eigen::Matrix<double, -1, 1>; CoeffVectorType = Eigen::Matrix<double, -1, 1>]\u001b[m\u001b[K’\n",
@@ -5232,7 +5222,7 @@
             "* DONE (ggpubr)\n",
             "\n",
             "The downloaded source packages are in\n",
-            "\t‘/tmp/RtmpwIC96O/downloaded_packages’\n",
+            "\t‘/tmp/Rtmp55asBr/downloaded_packages’\n",
             "> \n",
             "> \n"
           ]
@@ -5247,7 +5237,7 @@
       "metadata": {
         "id": "jqUxPz5CsIhl"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -5260,15 +5250,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sCvNvR8csezA",
-        "outputId": "10cf58a2-e200-44ab-d855-8185a4437800"
+        "outputId": "ecb8046c-b3f7-4f47-c173-a65de2ff1dac"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/129.1 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m129.1/129.1 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/129.1 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━\u001b[0m \u001b[32m122.9/129.1 kB\u001b[0m \u001b[31m50.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m129.1/129.1 kB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -5287,7 +5277,7 @@
         "id": "JoEgTqbsoTaB",
         "collapsed": true
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -5889,9 +5879,48 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "##############################Training of complete dataset using hyper-tuned models###################################\n",
+        "######################################################################################################################\n",
+        "\n",
+        "###Load training data\n",
+        "train = pd.read_csv(\"Training_data.csv\")\n",
+        "X_train = train.iloc[: , 2:-1]\n",
+        "Y_train = train.iloc[: , -1:]\n",
+        "\n",
+        "###Load hyper-tuned models obtained from the previous step and fit training data\n",
+        "for i in range(5):\n",
+        "    h_model = tf.keras.models.load_model('precily_cv_'+str(i+1)+'.hdf5')\n",
+        "    h_model.fit(X_train, Y_train, verbose = 1, epochs=50, batch_size = 128)\n",
+        "    h_model.save('Model'+str(i+1)+'.hdf5')\n",
+        "    h_model = None"
+      ],
       "metadata": {
         "id": "BOSvowtCcsH-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "##############################Training of complete dataset using hyper-tuned models###################################\n",
+        "######################################################################################################################\n",
+        "\n",
+        "###Load training data\n",
+        "train = pd.read_csv(\"Training_data.csv\")\n",
+        "X_train = train.iloc[: , 2:-1]\n",
+        "Y_train = train.iloc[: , -1:]\n",
+        "\n",
+        "###Load hyper-tuned models obtained from the previous step and fit training data\n",
+        "for i in range(5):\n",
+        "    h_model = tf.keras.models.load_model('Model'+str(i+1)+'.hdf5')\n",
+        "    h_model.fit(X_train, Y_train, verbose = 1, epochs=50, batch_size = 128)\n",
+        "    h_model.save('ModelVale'+str(i+1)+'.hdf5')\n",
+        "    h_model = None"
+      ],
+      "metadata": {
+        "id": "Rqu5DBz9gvMP"
       },
       "execution_count": null,
       "outputs": []
