--- a/Precily.ipynb
+++ b/Precily.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/Seung-heon-Baek/Precily/blob/main/Precily.ipynb",
-      "authorship_tag": "ABX9TyN72hZm0282Y2Uo2hM8UuBt",
+      "authorship_tag": "ABX9TyNAieO5tNxhsLAcVJTNnWnh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "id": "9ko5VDMgstOI",
         "outputId": "08e9bbc9-7c31-4798-bf4a-92f3ac7305b6"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,7 +218,7 @@
         "outputId": "c807bb1b-7df9-48a0-d752-e900d9f72f0a",
         "collapsed": true
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5237,7 +5237,7 @@
       "metadata": {
         "id": "jqUxPz5CsIhl"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5252,7 +5252,7 @@
         "id": "sCvNvR8csezA",
         "outputId": "ecb8046c-b3f7-4f47-c173-a65de2ff1dac"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5277,7 +5277,7 @@
         "id": "JoEgTqbsoTaB",
         "collapsed": true
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5871,7 +5871,10 @@
         "- Precily_pathways.py - Vale data를 추가한 training data로 재학습\n",
         "- Vale data - 175개 data 중 GSVA 가능(precily에서 gene expression data 제공) - 126개\n",
         "- 1000 nM 제거 - 51개\n",
-        "- 그 중 홀수번 데이터 지우고 vale training data 생성"
+        "- 그 중 홀수번 데이터 지우고 vale training data 생성\n",
+        "\n",
+        "- 결과: precily에서 공개된 test data에 대해서는 이전과 유사한 cor를 보였지만,\n",
+        "Vale test data는 전혀 예측하지 못함"
       ],
       "metadata": {
         "id": "UbTilEyecrc7"
